# data-sense

./: README.md
agent-service/: .gitignore  main.py  pyproject.toml  requirements.txt
agent-service/agent/: graph.py  history.py  nodes.py  prompts.py  state.py
agent-service/agent/db/: execute.py
agent-service/agent/rag/: retriever.py
agent-service/agent/utils/: utils.py
agent-service/api/: query.py
agent-service/api/dto/: request.py  response.py
agent-service/core/: config.py  db.py  llm.py
agent-service/embedder/: build_chunk.py  embedder.py  table_cols.py
agent-service/embedder/metadata/: col_enums.py  tables.py
agent-service/extra/embedder/: build_chunk.py  chunks.py  test_embedder.py
agent-service/extra/embedder/metadata/: col_desc.py
agent-service/notebooks/: embedder_test.ipynb  graph_test.ipynb
ui/: .gitignore  main.py  pyproject.toml  requirements.txt
